--- a/centos/6/Dockerfile
+++ b/centos/6/Dockerfile
@@ -7,4 +7,10 @@ RUN yum install -y \
 RUN yum install -y \
   http://dl.iuscommunity.org/pub/ius/stable/CentOS/6/x86_64/ius-release-1.0-13.ius.centos6.noarch.rpm
 
+RUN yum clean all && yum install -y \
+  gcc \
+  gcc-c++ \
+  make \
+  openssl-devel
+
 RUN yum clean all
