--- a/debian/8/Dockerfile
+++ b/debian/8/Dockerfile
@@ -1,3 +1,4 @@
+#
 FROM debian:jessie
 MAINTAINER ccg <ccgdevops@googlegroups.com>
 
@@ -8,13 +9,32 @@ ENV LC_ALL en_US.UTF-8
 
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
   locales \
-  && locale-gen en_US \
-  && apt-get update && apt-get install -y \
+  && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+RUN dpkg-reconfigure locales && \
+  locale-gen C.UTF-8 && \
+  /usr/sbin/update-locale LANG=C.UTF-8
+
+RUN echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen && \
+  locale-gen
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
   apt-transport-https \
   build-essential \
   ca-certificates \
   && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN env --unset=DEBIAN_FRONTEND
+
+RUN mkdir /app
+
+RUN addgroup --gid 1000 ccg-user \
+  && adduser --disabled-password --home /data --no-create-home --system -q --uid 1000 --ingroup ccg-user ccg-user \
+  && mkdir /data \
+  && chown ccg-user:ccg-user /data
+
+VOLUME ["/app", "/data"]
+
+CMD /bin/sh
