/app /data ccg-user

--- a/centos/6/Dockerfile
+++ b/centos/6/Dockerfile
@@ -1,5 +1,8 @@
+#
 FROM centos:centos6
 MAINTAINER ccg <ccgdevops@googlegroups.com>
+
+ENV HOME /root
 
 RUN yum install -y \
   http://mirror.aarnet.edu.au/pub/epel/6/i386/epel-release-6-8.noarch.rpm \
@@ -12,3 +15,14 @@ RUN yum install -y \
   make \
   openssl-devel \
   && yum clean all
+
+RUN mkdir /app
+
+RUN groupadd --gid 1000 ccg-user \
+  && useradd --home-dir /data --no-create-home --system --uid 1000 --gid 1000 ccg-user \
+  && mkdir /data \
+  && chown ccg-user:ccg-user /data
+
+VOLUME ["/app", "/data"]
+
+CMD /bin/sh
