--- a/ubuntu/14.04/Dockerfile
+++ b/ubuntu/14.04/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:14.04
-MAINTAINER ccg <devops@ccg.murdoch.edu.au>
+MAINTAINER https://github.com/muccg
 
 ENV HOME /root
 ENV LANG en_US.UTF-8
