--- a/ubuntu/14.04/Dockerfile
+++ b/ubuntu/14.04/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:14.04
+FROM buildpack-deps:trusty-curl
 MAINTAINER https://github.com/muccg
 
 ENV HOME /root
@@ -6,17 +6,12 @@ ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
 
-ENV DEBIAN_FRONTEND noninteractive
-
 RUN apt-get update && apt-get install -y --no-install-recommends \
   language-pack-en \
   && locale-gen en_US \
   && apt-get update && apt-get install -y --no-install-recommends \
   apt-transport-https \
-  ca-certificates \
   && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-RUN env --unset=DEBIAN_FRONTEND
 
 RUN mkdir /app
 
